--- a/Web.config
+++ b/Web.config
@@ -1,7 +1,15 @@
 ﻿<?xml version="1.0"?>
 <configuration>
+  <appSettings>
+	  <add key ="ValidationSettings:UnobtrusiveValidationMode" value="none"/>
+									
+  </appSettings>
   <system.web>
-	<pages theme="DarkGrey"/>
+	  <pages theme="DarkGrey">
+		  <controls>
+			  <add tagPrefix="Wrox" tagName="Banner" src="~/Controls/Banner.ascx"/>
+		  </controls>
+	  </pages>
     <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
   </system.web>
